tests/integration_tests/snapshots/integration__integration_tests__shell_wrapper__tests__switch_create.snap
---
source: tests/integration_tests/shell_wrapper.rs
expression: output.normalized()
---
✅ [32mCreated new worktree for [1mfeature[22m from [1mmain[22m at [1m[TMPDIR]/repo.feature[39m[22m
