tests/integration_tests/snapshots/integration__integration_tests__shell_wrapper__tests__switch_with_execute_through_wrapper.snap
---
source: tests/integration_tests/shell_wrapper.rs
expression: normalized.as_ref()
---
Created new worktree for [1mtest-exec[0m at [TMPDIR]/test-repo.test-exec
executed
