tests/integration_tests/snapshots/integration__integration_tests__shell_wrapper__tests__switch_with_post_start_command_no_directive_leak.snap
---
source: tests/integration_tests/shell_wrapper.rs
expression: output.normalized()
---
✅ [32mCreated new worktree for [1mfeature-with-hooks[22m from [1mmain[22m at [1m[TMPDIR]/repo.feature-with-hooks[39m[22m
🔄 [36mRunning post-start:[39m
[107m [0m  [2m[0m[2m[34mecho[0m[2m [0m[2m[32m'test command executed'[0m[2m[0m
